Interactive sidebar nav with correct alignments

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 /*  SETUP */
 html, body {
-    /* height: 100vh;
-    width: 100vh; */
+    height: 100vh;
+    width: 100vw; 
     background: black;
-    height: 1000px;
-    width: 1000px;
+    /*height: 1000px;
+    width: 1000px;*/
     margin: 0%;
 }
 
@@ -26,7 +26,7 @@ h2 {
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-columns: 20% 80%;
+    grid-template-columns: 330px auto;
 }
 /* ----------------------------------------------- */
 /*  SIDEBAR  */
@@ -34,6 +34,7 @@ h2 {
     background: white;
     display: grid;
     grid-template-rows: 5% auto;
+    margin-top: 20px;
 }
 
 .SidebarHeader {
@@ -104,6 +105,7 @@ h2 {
     margin: 0 auto;
     border-radius: 15px;
     font: bold 12px Helvetica;
+
 }
 /* ----------------------------------------------- */
 /* CONTENT  */
@@ -164,4 +166,65 @@ https://stackoverflow.com/questions/9251354/css-customized-scroll-bar-in-div
     background: #F6F6F9;
     color: #939393;
     grid-column-start: 4;
+}
+
+.listEl{
+    padding: 0px 0px 0px 30px !important;
+    margin: 0px 0px 0px 20px !important;
+    text-decoration: none;
+    line-height: 32px !important;
+    font-size: 16px;
+    color: #49367E;
+    display: block;
+    background-color: white;
+    border-radius: 25px;
+    height: 32px !important;
+    width: 50%px !important;
+}
+
+.listEl:hover{
+    background: #F6F6F9;
+}
+
+.collapsible-header{
+    padding: 0px 0px 0px 30px !important;
+    text-decoration: none;
+    line-height: 40px !important;
+    font-size: 16px;
+    color: #49367E;
+    display: block;
+    background-color: white;
+    border-radius: 25px;
+
+    width: 100%;
+    border-bottom: white;
+}
+
+.collapsible-header:hover{
+    background: #F6F6F9 !important;
+}
+
+.active{
+    background-color: white !important;
+}
+
+.collapsible{
+    margin: 40px 0px 0px 0px !important;
+    border-top-color: white;
+    border-top: 0px;
+    border-bottom-color: white;
+    border-bottom: 0px;
+    border-right-color: white;
+    border-right: 0px;
+    border-left-color: white;
+    border-left: 0px;
+    box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0), 0 0px 0px 0px rgba(0, 0, 0, 0), 0 0px 0px 0 rgba(0, 0, 0, 0);
+}
+
+.collapsible-body{
+    padding: 0px 0px 0px 0px !important;
+}
+
+.sidebarMarg{
+    margin-left: 50px;
 }
